syntax = "proto3";

import "Models/Analyzer/Proto/Requirements.proto";

option csharp_namespace = "Tradie.Analyzer.Proto";

message ItemType {
  int32 id = 1;
  string name = 2;
  string category = 3;
  repeated string subcategories = 4;
  Requirements requirements = 5;
  int32 width = 6;
  int32 height = 7;
}